[package]
name = "rtcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rip = { path = "../rip" }
libc = "0.2"
array-macro = "2.1.5"
lazy_static = "1.4.0"
chrono = "0.4"
flume = "0.10"

[lib]
name = "rtcp"
crate-type = ["staticlib", "cdylib"]